package co.edu.umanizales.police_api.model;

// nombre y categoria del caso

public record CaseCategory(String name, String description) { }
