package co.edu.umanizales.police_api.model;

//Tipos de crimenes que utiliza el sistema

public enum CrimeType {
    THEFT, ASSAULT, VANDALISM, TRAFFIC, OTHER
}
